# freettcn_te

./: .gitmodules  .travis.yml  CMakeLists.txt  README.md  appveyor.yml
cmake/: compile_warnings.cmake  compilers.cmake
doc/: CMakeLists.txt  Doxyfile  Doxyfile.in
scripts/: clang-tidy.sh
src/: .clang-tidy
src/te/: CMakeLists.txt
src/te/include/freettcn/: tci.h  types.h
src/te/src/: basic.cpp  basic.h
src/te/tests/: CMakeLists.txt  test_te.cpp
te/: CMakeLists.txt
te/src/: basic.cpp  basic.h
test/: CMakeLists.txt  test_te.cpp
